--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -260,5 +260,6 @@
   "AlertUser":"На жаль було щось неправильно введено, будь ласка, перевірте чи все правильно введено і спробуйте ще раз.і",
   "AuthenticationError":"Помилка під час автентифікації",
   "InvalidEmailError":"Помилка при введенні адреси електронної пошти. Будь ласка, перевірте правильність адреси.",
-  "PasswordLengthError":"Помилка при введені паролю. Пароль має бути не менше 8 символів і не більше 32."
+  "PasswordLengthError":"Помилка при введені паролю. Пароль має бути не менше 8 символів і не більше 32.",
+  "TotalPrice": "Підсумкова ціна: "
 }
