--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -257,5 +257,22 @@
   "AuthenticationError":"Error during authentication",
   "InvalidEmailError":"Error entering email address. Please make sure the email address is correct.",
   "PasswordLengthError":"Error entering password. The password must be at least 8 characters and no more than 32 characters.",
-  "TotalPrice": "Total price: "
+  "TotalPrice": "Total price: ",
+  "titles": {
+    "home": "Home",
+    "map": "Map",
+    "travels": "Travels",
+    "routes": "Routes",
+    "account": "Account",
+    "help": "Help",
+    "rules": "Rules",
+    "info-about-us": "Info About Us",
+    "privacy-policy": "Privacy Policy",
+    "authorisation": "Authorisation",
+    "registration": "Registration",
+    "search": "Search Tickets",
+    "buy-ticket": "Buy Ticket",
+    "admin-panel": "Admin Panel",
+    "qr-code": "QR Code"
+  }
 }
