--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -261,5 +261,22 @@
   "AuthenticationError":"Помилка під час автентифікації",
   "InvalidEmailError":"Помилка при введенні адреси електронної пошти. Будь ласка, перевірте правильність адреси.",
   "PasswordLengthError":"Помилка при введені паролю. Пароль має бути не менше 8 символів і не більше 32.",
-  "TotalPrice": "Підсумкова ціна: "
+  "TotalPrice": "Підсумкова ціна: ",
+  "titles": {
+    "home": "Головна",
+    "map": "Карта",
+    "travels": "Подорожі",
+    "routes": "Маршрути",
+    "account": "Акаунт",
+    "help": "Допомога",
+    "rules": "Правила",
+    "info-about-us": "Про нас",
+    "privacy-policy": "Політика конфіденційності",
+    "authorisation": "Авторизація",
+    "registration": "Реєстрація",
+    "search": "Пошук квитків",
+    "buy-ticket": "Купити квиток",
+    "admin-panel": "Адмін панель",
+    "qr-code": "QR код"
+  }
 }
