--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -273,7 +273,7 @@
     "registration": "Registration",
     "search": "Search Tickets",
     "buy-ticket": "Buy Ticket",
-    "admin-panel": "Admin Panel",
+    "adminpanel": "Admin Panel",
     "qr-code": "QR Code"
   },
   "ua":"ua"
