--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -277,7 +277,7 @@
     "registration": "Реєстрація",
     "search": "Пошук квитків",
     "buy-ticket": "Купити квиток",
-    "admin-panel": "Адмін панель",
+    "adminpanel": "Адмін панель",
     "qr-code": "QR код"
   },
   "ua":"ua"
