--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -55,7 +55,7 @@
   "NameSerT": "Доступні та безпечні поїздки",
   "DescrSerT": "Подорожувати з нами не тільки доступно, але й безпечно. Ми пріоритезуємо безпеку наших пасажирів, забезпечуючи, щоб усі наші автобуси були оснащені найсучаснішими засобами безпеки та керовані досвідченими водіями. Насолоджуйтеся конкурентними цінами та різноманітними знижками, щоб зробити вашу подорож ще приємнішою.",
   "WhoWe": "Хто ми?",
-  "WeAre": "Ми - TravelBus!",
+  "WeAre": "Ми - BusTravel!",
   "NameTitlePartF": "Ласкаво просимо до BusTravel!",
   "TextTitlePartF": "Ми — молода та амбітна компанія, яка тільки розпочинає свій шлях у сфері автобусних перевезень. Нашою метою є забезпечити комфортні та безпечні подорожі для кожного клієнта. Відповідальний підхід до роботи та любов до своєї справи — це те, що вирізняє нас серед інших.",
   "NameTitlePartS": "Відповідальність і надійність - наші пріоритети",
@@ -280,5 +280,6 @@
     "adminpanel": "Адмін панель",
     "qr-code": "QR код"
   },
-  "ua":"ua"
+  "ua":"ua",
+  "FailedBuyTicket": "Не вдалося купити квиток, спробуйте перевірити данні!"
 }
